--- a/virtual_lab/src/main/webapp/index.html
+++ b/virtual_lab/src/main/webapp/index.html
@@ -57,6 +57,7 @@
 	
 					<div ng-include="'partials/registration-modal.html'"></div>
 					<div ng-include="'partials/login-modal.html'"></div>
+					<div ng-include="'partials/feedback-modal.html'"></div>
 	
 					<button type="button" class="btn btn-navbar" data-toggle="collapse"
 						data-target=".nav-collapse">
