RR: initial integration of Marco's Solr simple search. -- needs some work to bring into compliance with the site theme -- faceting bug needs to be verified against the original. -- needs the landing page to pass on the search string to the main search.

--- a/trunk/virtual_lab/src/main/webapp/index.html
+++ b/trunk/virtual_lab/src/main/webapp/index.html
@@ -150,15 +150,17 @@
 		<script src="lib/bootstrap/js/bootstrap.js"></script>
 		<script src="lib/angular/angular.js"></script>
 		<script src="lib/angular/angular-resource.js"></script>
-		<script
-			src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.3.0.js"></script>
+		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.3.0.js"></script>
 	
 		<script src="js/app.js"></script>
 		<script src="js/controllers.js"></script>
 		<script src="js/filters.js"></script>
 		<script src="js/services.js"></script>
 		<script src="js/directives.js"></script>
-		<script src="lib/angular/angular-resource.js"></script>
+		
+		<script src="js/simple-search/controllers.js"></script>
+		<script src="js/simple-search/filters.js"></script>
+		<script src="js/simple-search/services.js"></script>
 	
 		<!-- 		<script src="js/huniaggregate/app.js"></script>
 			<script src="js/huniaggregate/controllers.js"></script>
