--- a/virtual_lab/src/main/webapp/index.html
+++ b/virtual_lab/src/main/webapp/index.html
@@ -14,6 +14,8 @@
 		<link href="css/style.css" rel="stylesheet">
 		<link href="lib/angular-ui/angular-ui.css" rel="stylesheet">
 		<link href="./css/3column.css" rel="stylesheet">
+		<link href="./css/simple-search.css" rel="stylesheet">
+		
 		
 		<!-- RR: verify that this is needed considering the current bootstrap distribution.    
 			<link href="css/bootstrap-responsive.css" rel="stylesheet">
