--- a/trunk/virtual_lab/src/main/webapp/index.html
+++ b/trunk/virtual_lab/src/main/webapp/index.html
@@ -150,8 +150,15 @@
 	
 		<script src="http://code.jquery.com/jquery.js"></script>
 		<script src="lib/bootstrap/js/bootstrap.js"></script>
+		
+<!-- 		
 		<script src="lib/angular/angular.js"></script>
 		<script src="lib/angular/angular-resource.js"></script>
+ -->		
+		
+		<script src="lib/angular-1.1.5/angular.js"></script>
+		<script src="lib/angular-1.1.5/angular-resource.js"></script>
+		
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.3.0.js"></script>
 	
 		<script src="js/app.js"></script>
