RR: initial integration of RDF facet browser. -- Not all working yet. -- saving of query keywords in a service for later retrieval. -- adapted the landing page to pickup the user's keywords from the deep search form.

--- a/trunk/virtual_lab/src/main/webapp/index.html
+++ b/trunk/virtual_lab/src/main/webapp/index.html
@@ -15,6 +15,7 @@
 		<link href="lib/angular-ui/angular-ui.css" rel="stylesheet">
 		<link href="./css/3column.css" rel="stylesheet">
 		<link href="./css/simple-search.css" rel="stylesheet">
+		<link href="./css/deep-search.css" rel="stylesheet">
 		
 		
 		<!-- RR: verify that this is needed considering the current bootstrap distribution.    
@@ -170,13 +171,9 @@
 		<script src="js/simple-search/controllers.js"></script>
 		<script src="js/simple-search/filters.js"></script>
 		<script src="js/simple-search/services.js"></script>
+		
+		<script type="text/javascript" id="facet-browser-engine" src="js/deep-search/facet-browser.js"></script>   
 	
-		<!-- 		<script src="js/huniaggregate/app.js"></script>
-			<script src="js/huniaggregate/controllers.js"></script>
-			<script src="js/huniaggregate/filters.js"></script>
-			<script src="js/huniaggregate/services.js"></script>
-			<script src="js/huniaggregate/directives.js"></script>
-	 -->
 		<!-- /shindig-project/content/README 
 		    <script type="text/javascript" src="../../js/shindig-container:rpc.js?c=1"></script>
 		     -->
