--- a/virtual_lab/src/main/webapp/index.html
+++ b/virtual_lab/src/main/webapp/index.html
@@ -55,6 +55,7 @@
 							<!-- Button to trigger login modal - login-modal.html -->
 							<li><a href="#loginModal" role="button" data-toggle="modal">Login</a></li>|
 							<li><a href="#">Find Out More</a></li>
+							<li>Version: 0.1.1, $Date$ - $Revision$</li>
 						</ul>
 					</div>
 	
