RR: landing page left column populated with data providers graphics and links.

--- a/trunk/virtual_lab/src/main/webapp/index.html
+++ b/trunk/virtual_lab/src/main/webapp/index.html
@@ -16,9 +16,8 @@
 		<link href="./css/3column.css" rel="stylesheet">
 		<link href="./css/simple-search.css" rel="stylesheet">
 		<link href="./css/deep-search.css" rel="stylesheet">
-		
-		
-		<!-- RR: verify that this is needed considering the current bootstrap distribution.    
+				
+		<!-- RR: this is not needed since its included in the current bootstrap css file.    
 			<link href="css/bootstrap-responsive.css" rel="stylesheet">
 		 -->
 		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
