--- a/trunk/virtual_lab/src/main/webapp/index.html
+++ b/trunk/virtual_lab/src/main/webapp/index.html
@@ -16,7 +16,25 @@
 		<link href="./css/3column.css" rel="stylesheet">
 		<link href="./css/simple-search.css" rel="stylesheet">
 		<link href="./css/deep-search.css" rel="stylesheet">
-				
+		<style type="text/css">
+			body {
+			  padding-top: 113px;
+			  padding-bottom: 40px;
+			}
+			.sidebar-nav {
+			  padding: 9px 0;
+			}
+			
+			@media (max-width: 980px) {
+			  /* Enable use of floated navbar text */
+			  .navbar-text.pull-right {
+			    float: none;
+			    padding-left: 5px;
+			    padding-right: 5px;
+			  }
+			}
+		</style>
+ 				
 		<!-- RR: this is not needed since its included in the current bootstrap css file.    
 			<link href="css/bootstrap-responsive.css" rel="stylesheet">
 		 -->
@@ -39,7 +57,11 @@
 
 	<body id="index">
 	
-		<div class="navbar">
+		<div ng-include="'partials/registration-modal.html'"></div>
+		<div ng-include="'partials/login-modal.html'"></div>
+		<div ng-include="'partials/feedback-modal.html'"></div>
+
+		<div class="navbar navbar-fixed-top">
 			<!-- header start -->
 			<div class="navbar-inner">
 				<div class="container">
@@ -63,11 +85,7 @@
 							<li style="color: red; position:fixed; z-index:1000; top: 3px; right: 10px; font-size:  10px" >Version: 0.1.1, Date: <script>document.write(dateInfo)</script>, Rev: <script>document.write(revInfo)</script></li>
 						</ul>
 					</div>
-	
-					<div ng-include="'partials/registration-modal.html'"></div>
-					<div ng-include="'partials/login-modal.html'"></div>
-					<div ng-include="'partials/feedback-modal.html'"></div>
-	
+		
 					<button type="button" class="btn btn-navbar" data-toggle="collapse"
 						data-target=".nav-collapse">
 						<!-- navigation toggle button -->
