RR: feedback is now being saved in the backend database via a RESTful web services call from the Virtual Lab dialog interface. -- there is a working service.

--- a/trunk/virtual_lab/src/main/webapp/index.html
+++ b/trunk/virtual_lab/src/main/webapp/index.html
@@ -12,7 +12,6 @@
 		<!-- Le styles -->
 		<link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<link href="lib/angular-ui/angular-ui.css" rel="stylesheet">
 		<link href="./css/3column.css" rel="stylesheet">
 		<link href="./css/simple-search.css" rel="stylesheet">
 		<link href="./css/deep-search.css" rel="stylesheet">
@@ -59,7 +58,6 @@
 	
 		<div ng-include="'partials/registration-modal.html'"></div>
 		<div ng-include="'partials/login-modal.html'"></div>
-		<div ng-include="'partials/feedback-modal.html'"></div>
 
 		<div class="navbar navbar-fixed-top">
 			<!-- header start -->
@@ -113,7 +111,7 @@
 									<li><a ng-href="#/huni-aggregate">The HuNI Aggregate</a></li>
 									<li><a ng-href="#/dataset-directory">HuNI Data
 											Providers</a></li>
-									<li><a ng-href="#/dataset-directory">Internet Sources</a></li>
+									<li><a ng-href="#/humanities-datasources">Internet Sources</a></li>
 								</ul></li>
 							<li><a ng-href="#/help">Tutorials/Help</a></li>
 							<li class="dropdown"><a class="dropdown-toggle"
@@ -183,9 +181,11 @@
 		
 		<script src="lib/angular-1.1.5/angular.js"></script>
 		<script src="lib/angular-1.1.5/angular-resource.js"></script>
+		<script src="lib/angular-ui/angular-ui.js"></script>
 		
-		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.3.0.js"></script>
-	
+		
+<!-- 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.3.0.js"></script>
+ -->			
 		<script src="js/app.js"></script>
 		<script src="js/controllers.js"></script>
 		<script src="js/filters.js"></script>
