RR: authentication and access control for RESTful web services used by AngularJS. -- uses basic auth to be compatible with the REST stateless model. -- This is a messy commit as i have let part of the learning experience in here for the record. The next commit will be a cleanup. -- there is a finder for researcher so I can have a validate user service and return a user profile at the same time. -- and initial move to have a user profile editing service.

--- a/trunk/virtual_lab/src/main/webapp/index.html
+++ b/trunk/virtual_lab/src/main/webapp/index.html
@@ -56,9 +56,6 @@
 	</head>
 
 	<body id="index">
-	
-		<div ng-include="'partials/login-modal.html'"></div>
-
 		<div class="navbar navbar-fixed-top">
 			<!-- header start -->
 			<div class="navbar-inner">
@@ -72,7 +69,8 @@
 							<li ng-include="'partials/registration-button.html'"></li> 
 							|
 							<!-- Button to trigger login modal - login-modal.html -->
-							<li><a href="#loginModal" role="button" data-toggle="modal">Login</a></li>|
+							<li ng-include="'partials/login-button.html'"></li>
+							|
 							<li><a href="#">Find Out More</a></li>
 							<script>
 								var dateInfo = "$Date$";
