--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -192,6 +192,7 @@
 		<script src="js/filters.js"></script>
 		<script src="js/services.js"></script>
 		<script src="js/directives.js"></script>
+		<script src="js/routingConfig.js"></script>
 		
 		<script src="js/simple-search/controllers.js"></script>
 		<script src="js/simple-search/filters.js"></script>
