RR: added authorisation javascript libs from https://github.com/fnakstad/angular-client-side-auth
This is intended to give me clean control over visibility of user interface elements depending on the logged in users's role.

Actual authorisation is still controlled by the backend.

--- a/branches/virtual_lab_client_access_control/src/main/webapp/index.html
+++ b/branches/virtual_lab_client_access_control/src/main/webapp/index.html
@@ -192,6 +192,7 @@
 		<script src="js/filters.js"></script>
 		<script src="js/services.js"></script>
 		<script src="js/directives.js"></script>
+		<script src="js/routingConfig.js"></script>
 		
 		<script src="js/simple-search/controllers.js"></script>
 		<script src="js/simple-search/filters.js"></script>
