RR: updated build label on index.html.

--- a/trunk/virtual_lab/src/main/webapp/index.html
+++ b/trunk/virtual_lab/src/main/webapp/index.html
@@ -4,12 +4,10 @@
 		<meta charset="utf-8">
 		<title>HuNI Virtual Laboratory | Home</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description"
-			content="A virtual laboratory for humanities researchers based on semantic web principles.">
-		<meta name="author"
-			content="Spencer Wu (Intersect), Richard Rothwell (VeRSI)">
+		<meta name="description" content="A virtual laboratory for humanities researchers based on semantic web principles.">
+		<meta name="author" content="Spencer Wu (Intersect), Richard Rothwell (VeRSI)">
 		
-		<!-- Le styles -->
+		<!-- Styles -->
 		<link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 		<link href="./css/3column.css" rel="stylesheet">
