--- a/virtual_lab/src/main/webapp/index.html
+++ b/virtual_lab/src/main/webapp/index.html
@@ -32,6 +32,16 @@
 			  }
 			}
 		</style>
+
+		<style type="text/css">
+			.css-form input.ng-invalid.ng-dirty {
+				background-color: #ffeeee;
+			}
+			
+			.css-form input.ng-valid.ng-dirty {
+				background-color: #eeffee;
+			}
+		</style>
  				
 		<!-- RR: this is not needed since its included in the current bootstrap css file.    
 			<link href="css/bootstrap-responsive.css" rel="stylesheet">
