RR: data providers detail page

--- a/trunk/virtual_lab/src/main/webapp/index.html
+++ b/trunk/virtual_lab/src/main/webapp/index.html
@@ -13,7 +13,8 @@
 		<link href="./css/3column.css" rel="stylesheet">
 		<link href="./css/simple-search.css" rel="stylesheet">
 		<link href="./css/deep-search.css" rel="stylesheet">
-		<link href="lib/select2/select2.css" rel="stylesheet" >
+		<link href="./css/data-provider.css" rel="stylesheet">
+		<link href="lib/select2/select2.css" rel="stylesheet" >		
 		<style type="text/css">
 			body {
 			  padding-top: 113px;
@@ -115,7 +116,7 @@
 									class="caret"></b></a>
 								<ul class="dropdown-menu">
 									<li><a ng-href="#/huni-aggregate">The HuNI Aggregate</a></li>
-									<li><a ng-href="#/dataset-directory">HuNI Data
+									<li><a ng-href="#/data-providers">HuNI Data
 											Providers</a></li>
 									<li><a ng-href="#/humanities-datasources">Internet Sources</a></li>
 								</ul></li>
