--- a/virtual_lab/src/main/webapp/index.html
+++ b/virtual_lab/src/main/webapp/index.html
@@ -197,7 +197,7 @@
 		<script src="lib/angular-1.1.5/angular.js"></script>
 		<script src="lib/angular-1.1.5/angular-resource.js"></script>
 		<script src="lib/angular-1.1.5/angular-cookies.js"></script>
-		<script src="lib/angular-ui/angular-ui.js"></script>
+		<script src="lib/angular-ui/ui-bootstrap-tpls-0.5.0.js"></script>
 		<script src="lib/select2/select2.js"></script>
 		<script src="lib/angular-ui-select2/select2.js"></script>
 		
